# FlowForge

./: CMakeLists.txt  README.md
config/: workflows.json
plugins/: CMakeLists.txt  CompressAction.cpp  EmailPlugin.cpp  MessagePlugin.cpp
src/: IAction.h  Logger.cpp  Logger.h  PathUtils.h  PluginLoader.cpp  PluginLoader.h  RuleEngine.cpp  RuleEngine.h  Storage.cpp  Storage.h  ThreadPool.cpp  ThreadPool.h  Workflow.cpp  Workflow.h  WorkflowManager.cpp  WorkflowManager.h  main.cpp
src/utils/: CMakeLists.txt  JSONParser.cpp  JSONParser.h
